tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"› Ask Agere to do anything                                                      "
"────────────────────────────────────────────────────────────────────────────────"
"  gpt-5.3 medium                                Plan mode (shift+tab to cycle)  "
