tui/src/chatwidget/snapshots/agere_tui__chatwidget__tests__unified_exec_unknown_end_with_active_exploring_cell.snap
---
source: tui/src/chatwidget/tests.rs
expression: snapshot
---
History:
• Bash(echo repro-marker)
  └ repro-marker

Active:
• Exploring
  └ Read null
